--- a/package.json
+++ b/package.json
@@ -15,10 +15,6 @@
   "author": "Cody Romano",
   "license": "MIT",
   "devDependencies": {
-    "prop-types": "15.6.0",
-    "react": "16.0.0",
-    "react-dom": "16.0.0",
-    "react-router-dom": "4.2.2",
     "babel-core": "6.26.0",
     "babel-loader": "7.1.2",
     "babel-preset-env": "1.6.1",
@@ -30,7 +26,11 @@
     "css-loader": "0.28.7",
     "eslint": "4.13.1",
     "eslint-plugin-react": "7.5.1",
-    "node-sass": "4.7.2",
+    "node-sass": "^4.9.3",
+    "prop-types": "15.6.0",
+    "react": "16.0.0",
+    "react-dom": "16.0.0",
+    "react-router-dom": "4.2.2",
     "sass-loader": "6.0.6",
     "style-loader": "0.19.1",
     "webpack": "2.7.0"
@@ -38,6 +38,7 @@
   "dependencies": {
     "deeplearn": "^0.5.1",
     "deeplearn-knn-image-classifier": "^0.3.0",
+    "hoek": "^5.0.4",
     "rc-progress": "^2.2.5"
   }
 }
